[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/pow/pow-frame-9.png" type="Texture" id=1]
[ext_resource path="res://assets/pow/pow-frame-7.png" type="Texture" id=2]
[ext_resource path="res://assets/pow/pow-frame-2.png" type="Texture" id=3]
[ext_resource path="res://assets/pow/pow-frame-10.png" type="Texture" id=4]
[ext_resource path="res://assets/pow/pow-frame-4.png" type="Texture" id=5]
[ext_resource path="res://assets/pow/pow-frame-3.png" type="Texture" id=6]
[ext_resource path="res://assets/pow/pow-frame-1.png" type="Texture" id=7]
[ext_resource path="res://assets/pow/pow-frame-8.png" type="Texture" id=8]
[ext_resource path="res://assets/pow/pow-frame-5.png" type="Texture" id=9]
[ext_resource path="res://assets/pow/pow-frame-6.png" type="Texture" id=10]
[ext_resource path="res://scenes/Powerup.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 25.1304

[node name="Powerup" type="Area2D" groups=[
"powerups",
]]
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Lifetime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Powerup_area_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
